--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project1",
+  "name": "userlane",
   "version": "1.0.0",
-  "description": "My First Cypress",
+  "description": "Cypress Automation Testing",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
